// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary with multi summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    5
     expense
    s
     totalling 
    $10.00
  </h1>
</div>
`;

exports[`should render summary with single summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $1.00
  </h1>
</div>
`;
